--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <h3 class="title title-pink title-large">is the new</h3>
           <h3 class="title title-black title-large">black</h3>
         </div>
-        <figure>
+        <figure class="main-hero-img">
           <img src="/images/cornelia.png" alt="cornelia" />
         </figure>
       </div>
@@ -64,7 +64,10 @@
       <div class="container">
         <div class="two-column">
           <article class="text-box">
-            <h3 class="title title-pink title-small">Choose your destiny</h3>
+            <h3 class="title title-pink title-small title-left">
+              Choose <br />
+              your destiny
+            </h3>
             <p class="text-pink">
               Each unicorn has its own personality and symbolism. Get to know
               your new mascot and surround yourself with a strong ally. Thus
@@ -73,13 +76,43 @@
               luck, meet the Magic Cornelia! If you’re born to be bold, choose
               the Impetuous Cornelia : nothing will defeat you.
             </p>
+            <a href="#" class="btn btn-transparent">
+              Learn more about her story
+            </a>
           </article>
           <article class="image-box">
-            <img
-              class="left-align-img"
-              src="/images/cornelia.png"
-              alt="cornelia"
-            />
+            <figure class="right-align-img">
+              <img src="/images/cornelia.png" alt="cornelia" />
+            </figure>
+          </article>
+        </div>
+      </div>
+    </section>
+    <section class="screen screen-white">
+      <div class="container">
+        <div class="two-column">
+          <article class="image-box">
+            <figure class="centered-align-img">
+              <img src="/images/Mask Group.png" alt="cornelia" />
+            </figure>
+          </article>
+          <article class="text-box centered-align">
+            <div class="text-content">
+              <h3 class="title title-pink title-small title-left">
+                Always <br />Go futher
+              </h3>
+              <p class="text-black">
+                Decline Cornelia as you wish! Black, dark grey, white, light
+                grey, prussian blue ... Choose your colour, size and
+                characteristics! And if that's not enough, personalise it to
+                make it unique, in your own image. So open up the field of
+                possibilities, the world is yours !
+              </p>
+              <p class="text-uppercase text-with-icon">
+                <img class="icono-small" src="images/Group103.svg" alt="" />
+                Scroll to know more
+              </p>
+            </div>
           </article>
         </div>
       </div>
