--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="#learn">Learn</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="why">Why</a></li>
+          <li><a href="#why">Why</a></li>
         </ul>
 
         <a href="#" class="btn btn-green">Download</a>
@@ -117,5 +117,305 @@
         </div>
       </div>
     </section>
+    <section class="screen screen-white">
+      <div class="container">
+        <div class="two-column">
+          <article class="text-box centered-align">
+            <div class="text-content">
+              <h3 class="title title-green title-small title-left">
+                Premium <br />3D Quality
+              </h3>
+              <p class="text-black">
+                Now the difference between a unicorn and a pegasus is quite
+                clear a unicorn has a horn which usually stores their magically
+                powers while a pegasus can only fly with its gorgeous wings. Now
+                the difference between a unicorn and a pegasus is quite clear a
+                unicorn has a horn.
+              </p>
+            </div>
+          </article>
+          <article class="image-box">
+            <figure class="centered-align-img">
+              <img src="images/Frame 108.png" alt="cornelia" />
+            </figure>
+          </article>
+        </div>
+      </div>
+    </section>
+    <section class="screen screen-grey">
+      <div class="container">
+        <div class="text-centered-grey">
+          <h3 class="title title-pink title-medium title-centered">
+            Let the magic happen
+          </h3>
+          <div text-content>
+            <p class="text-black">
+              Surround yourself with the most faithful companions and embark
+              together on fantastic new adventures! Pocket, medium or XXL
+              format, find the Cornelia that best suits your environment.
+            </p>
+            <p class="text-black">
+              <strong>Oh, and don't worry:</strong>
+              Cornelia feeds on your bad vibes, no need to give her water or
+              grass !
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="screen screen-gradient-pink">
+      <div class="container">
+        <h3 class="title title-white title-medium title-centered">
+          They talk about it better than us
+        </h3>
+        <div class="testimonials">
+          <div class="testimonials-column">
+            <div class="card">
+              <p class="card-text">
+                You've saved our business! Since I invested in Cornelia I made
+                over 100,000 dollars profits. Thank you so much for your help
+              </p>
+              <div class="card-author">
+                <img src="images/Face copy.png" class="card-img" alt="" />
+                <div class="card-details">
+                  <span class="card-name">Peter Miguel </span>
+                  <br />
+                  <span class="card-position"> CEO @Combinator</span>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Pellentesque libero cras
+              </p>
+              <div class="card-author">
+                <img src="images/Face (4).png" class="card-img" alt="" />
+                <div class="card-details">
+                  <span class="card-name">Linda R. Huff </span>
+                  <br />
+                  <span class="card-position">Happiness Manager @BlueSky </span>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <p class="card-text">
+                We can't understand how we've been living without Cornelia. We
+                have no regrets! Since I invested in Cornelia I made over
+                100,000 dollars profits. Needless to say we are extremely
+                satisfied with the results. Cornelia is the most valuable
+                business resource we have EVER purchased. Definitely worth the
+                investment. Not able to tell you how happy I am with Cornelia. I
+                am so pleased with this product.
+              </p>
+              <div class="card-author">
+                <img src="images/Ellipse 26.png" class="card-img" alt="" />
+                <div class="card-details">
+                  <span class="card-name">Valentine Sutton </span>
+                  <br />
+                  <span class="card-position"> Product Designer @Tools </span>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <p class="card-text">
+                Cornelia has got everything I need. Your company is truly
+                upstanding and is behind its product 100%. I can't say enough
+                about Cornelia. I'm good to go.
+              </p>
+              <div class="card-author">
+                <img src="images/Face (2).png" class="card-img" alt="" />
+                <div class="card-details">
+                  <span class="card-name">Helen Womack </span>
+                  <br />
+                  <span class="card-position">CTO @Stoock</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonials-column">
+            <div class="card">
+              <p class="card-text">
+                Without Cornelia, we would have gone bankrupt by now
+              </p>
+              <div class="card-author">
+                <img src="images/face10.png" class="card-img" alt="" />
+                <div class="card-details">
+                  <span class="card-name">Sarah Ewing </span>
+                  <br />
+                  <span class="card-position">
+                    Digital Manager @FullSocial
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <p class="card-text">
+                Cornelia did exactly what you said it does. I'd be lost without
+                Cornelia. I just can't get enough of Cornelia. I want to get a
+                T-Shirt with Cornelia on it so I can show it off to everyone. I
+                would like to personally thank you for your outstanding product.
+              </p>
+              <div class="card-author">
+                <img src="images/face8.png" class="card-img" alt="" />
+                <div class="card-details">
+                  <span class="card-name">Debra Peters </span>
+                  <br />
+                  <span class="card-position"> Product Owner @Generate</span>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <p class="card-text">We were treated like royalty</p>
+              <div class="card-author">
+                <img src="images/Face9.png" class="card-img" alt="" />
+                <div class="card-details">
+                  <span class="card-name">Vida Inman </span>
+                  <br />
+                  <span class="card-position">Sales Manager @UShould</span>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <p class="card-text">
+                I don't know what else to say. I made back the purchase price in
+                just 48 hours! The service was excellent. Cornelia saved my
+                business. I love Cornelia. We've seen amazing results already.
+                Cornelia is the most valuable business resource we have EVER
+                purchased. If you aren't sure, always go for Cornelia.
+              </p>
+              <div class="card-author">
+                <img src="images/Face4.png" class="card-img" alt="" />
+                <div class="card-details">
+                  <span class="card-name">John Morgan </span>
+                  <br />
+                  <span class="card-position"> CEO @FunkyToys</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="testimonials-column">
+            <div class="card">
+              <p class="card-text">
+                We've seen amazing results already. Buy this now. I couldn't
+                have asked for more than this. Cornelia has completely surpassed
+                our expectations. I just can't get enough of Cornelia. I want to
+                get a T-Shirt with Cornelia on it so I can show it off to
+                everyone. Thanks to Cornelia, we've just launched our 5th
+                website! I will let my mum know about this, she could really
+                make use of Cornelia! Thanks for the great service. The service
+                was excellent. Cornelia is worth much more than I paid. I would
+                gladly pay over 600 dollars for Cornelia. We can't understand
+                how we've been living without Cornelia.
+              </p>
+              <div class="card-author">
+                <img src="images/Face 6.png" class="card-img" alt="" />
+                <div class="card-details">
+                  <span class="card-name"> Larry Davis </span>
+                  <br />
+                  <span class="card-position"> Traffic Manager @Upside </span>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <p class="card-text">
+                Cornelia is both attractive and highly adaptable. Just what I
+                was looking for. I don't always clop, but when I do, it's
+                because of Cornelia. I love Cornelia. Great job, I will
+                definitely be ordering again! Thank you for making it painless,
+                pleasant and most of all hassle free! You guys rock! Thanks for
+                the great service. The service was excellent. Cornelia is worth
+                much more than I paid. I would gladly pay over 600 dollars for
+                Cornelia. We can't understand how we've been living without
+                Cornelia.
+              </p>
+              <div class="card-author">
+                <img src="images/Face7.png" class="card-img" alt="" />
+                <div class="card-details">
+                  <span class="card-name"> Joe Lembrouille </span>
+                  <br />
+                  <span class="card-position"> Photographer @Streetz </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="screen screen-white">
+      <div class="container">
+        <div class="two-column">
+          <article class="image-box">
+            <figure class="centered-align-img">
+              <img src="/images/Circles.png" alt="circles" />
+            </figure>
+          </article>
+          <article class="text-box centered-align">
+            <div class="text-content">
+              <h3 class="title title-green title-small title-left">
+                Each lesser <br />detail matter
+              </h3>
+              <p class="text-black">
+                Cornelia is an all-in-one tool that helps teams design every
+                part of the product experience. Download and get to a functional
+                prototype faster than ever.
+              </p>
+              <a href="#" class="btn btn-border-green"> Discover Cornelia </a>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+    <section class="screen screen-white-gradient">
+      <div class="container">
+        <div class="two-column">
+          <article class="text-box centered-align">
+            <div class="text-content">
+              <img
+                src="/images/logo-app-store 1.png"
+                class="logo-app-store"
+                alt="logo-app-store"
+              />
+              <h3 class="title title-green-center">Unicorns exist</h3>
+              <p class="text-black">
+                Download our appliaction on the AppStore or the 3D model of
+                Cornelia and meet your new mascot ! Take some cool pictures of
+                her and share it on Instagram, Twitter and Facebook with
+                #CorneliaTheUnicorn !
+              </p>
+              <a href="#" class="btn btn-border-green"> Meet Cornelia in VR</a>
+            </div>
+          </article>
+          <article class="image-box">
+            <figure class="right-align-img">
+              <img src="images/Frame 40 1.png" alt="cornelia" />
+            </figure>
+          </article>
+        </div>
+      </div>
+    </section>
+    <footer class="page-footer screen screen-green">
+      <h3 class="title title-medium title-pink">
+        Get started with <br />
+        Cornelia today
+      </h3>
+      <div class="footer-ctas">
+        <a href="#" class="btn btn-transparent btn-large"
+          ><img src="./images/figma-logo.svg" alt="Figma" /> Download for
+          Figma</a
+        >
+        <a href="#" class="btn btn-transparent btn-large"
+          ><img src="./images/sketch-logo.svg" alt="Sketch" /> Download for
+          Sketch</a
+        >
+      </div>
+      <figure class="footer-by-cornelia">
+        <img
+          src="./images/by-cornelia.png"
+          alt="Cornelia - Design and Development"
+        />
+      </figure>
+    </footer>
   </body>
 </html>
