cambio de nombres en imgs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="page-header">
       <div class="logo">
-        <img src="/images/Logotype.png" alt="" />
+        <img src="./images/Logotype.png" alt="logo" />
       </div>
       <nav>
         <ul>
@@ -37,7 +37,7 @@
           <h3 class="title title-black title-large">black</h3>
         </div>
         <figure class="main-hero-img">
-          <img src="/images/cornelia.png" alt="cornelia" />
+          <img src="./images/cornelia.png" alt="cornelia" />
         </figure>
       </div>
     </section>
@@ -82,7 +82,7 @@
           </article>
           <article class="image-box">
             <figure class="right-align-img">
-              <img src="/images/cornelia.png" alt="cornelia" />
+              <img src="./images/cornelia.png" alt="cornelia" />
             </figure>
           </article>
         </div>
@@ -93,7 +93,7 @@
         <div class="two-column">
           <article class="image-box">
             <figure class="centered-align-img">
-              <img src="/images/Mask Group.png" alt="cornelia" />
+              <img src="./images/Mask-group.png" alt="cornelia" />
             </figure>
           </article>
           <article class="text-box centered-align">
@@ -109,7 +109,7 @@
                 possibilities, the world is yours !
               </p>
               <p class="text-uppercase text-with-icon">
-                <img class="icono-small" src="images/Group103.svg" alt="" />
+                <img class="icono-small" src=".images/Group103.svg" alt="" />
                 Scroll to know more
               </p>
             </div>
@@ -136,7 +136,7 @@
           </article>
           <article class="image-box">
             <figure class="centered-align-img">
-              <img src="images/Frame 108.png" alt="cornelia" />
+              <img src="./images/Frame-108.png" alt="cornelia" />
             </figure>
           </article>
         </div>
@@ -176,7 +176,7 @@
                 over 100,000 dollars profits. Thank you so much for your help
               </p>
               <div class="card-author">
-                <img src="images/Face copy.png" class="card-img" alt="" />
+                <img src="./images/Face-copy.png" class="card-img" alt="" />
                 <div class="card-details">
                   <span class="card-name">Peter Miguel </span>
                   <br />
@@ -190,7 +190,7 @@
                 Pellentesque libero cras
               </p>
               <div class="card-author">
-                <img src="images/Face (4).png" class="card-img" alt="" />
+                <img src="./images/face4.png" class="card-img" alt="" />
                 <div class="card-details">
                   <span class="card-name">Linda R. Huff </span>
                   <br />
@@ -209,7 +209,7 @@
                 am so pleased with this product.
               </p>
               <div class="card-author">
-                <img src="images/Ellipse 26.png" class="card-img" alt="" />
+                <img src="./images/Ellipse-26.png" class="card-img" alt="" />
                 <div class="card-details">
                   <span class="card-name">Valentine Sutton </span>
                   <br />
@@ -224,7 +224,7 @@
                 about Cornelia. I'm good to go.
               </p>
               <div class="card-author">
-                <img src="images/Face (2).png" class="card-img" alt="" />
+                <img src="./images/Face-(2).png" class="card-img" alt="" />
                 <div class="card-details">
                   <span class="card-name">Helen Womack </span>
                   <br />
@@ -240,7 +240,7 @@
                 Without Cornelia, we would have gone bankrupt by now
               </p>
               <div class="card-author">
-                <img src="images/face10.png" class="card-img" alt="" />
+                <img src="./images/face10.png" class="card-img" alt="" />
                 <div class="card-details">
                   <span class="card-name">Sarah Ewing </span>
                   <br />
@@ -258,7 +258,7 @@
                 would like to personally thank you for your outstanding product.
               </p>
               <div class="card-author">
-                <img src="images/face8.png" class="card-img" alt="" />
+                <img src="./images/face8.png" class="card-img" alt="" />
                 <div class="card-details">
                   <span class="card-name">Debra Peters </span>
                   <br />
@@ -286,7 +286,7 @@
                 purchased. If you aren't sure, always go for Cornelia.
               </p>
               <div class="card-author">
-                <img src="images/Face4.png" class="card-img" alt="" />
+                <img src="./images/Face4.png" class="card-img" alt="" />
                 <div class="card-details">
                   <span class="card-name">John Morgan </span>
                   <br />
@@ -310,7 +310,7 @@
                 how we've been living without Cornelia.
               </p>
               <div class="card-author">
-                <img src="images/Face 6.png" class="card-img" alt="" />
+                <img src="./images/face-(6).png" class="card-img" alt="" />
                 <div class="card-details">
                   <span class="card-name"> Larry Davis </span>
                   <br />
@@ -331,7 +331,7 @@
                 Cornelia.
               </p>
               <div class="card-author">
-                <img src="images/Face7.png" class="card-img" alt="" />
+                <img src="./images/Face7.png" class="card-img" alt="" />
                 <div class="card-details">
                   <span class="card-name"> Joe Lembrouille </span>
                   <br />
@@ -348,7 +348,7 @@
         <div class="two-column">
           <article class="image-box">
             <figure class="centered-align-img">
-              <img src="/images/Circles.png" alt="circles" />
+              <img src="./images/Circles.png" alt="circles" />
             </figure>
           </article>
           <article class="text-box centered-align">
@@ -373,7 +373,7 @@
           <article class="text-box centered-align">
             <div class="text-content">
               <img
-                src="/images/logo-app-store 1.png"
+                src="./images/logo-app-store1.png"
                 class="logo-app-store"
                 alt="logo-app-store"
               />
@@ -389,7 +389,7 @@
           </article>
           <article class="image-box">
             <figure class="right-align-img">
-              <img src="images/Frame 40 1.png" alt="cornelia" />
+              <img src="./images/Frame-401.png" alt="cornelia" />
             </figure>
           </article>
         </div>
