--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
                 possibilities, the world is yours !
               </p>
               <p class="text-uppercase text-with-icon">
-                <img class="icono-small" src=".images/Group103.svg" alt="" />
+                <img
+                  class="icono-small"
+                  src="./images/sketch-logo.svg"
+                  alt=""
+                />
                 Scroll to know more
               </p>
             </div>
