--- a/index.html
+++ b/index.html
@@ -414,12 +414,12 @@
           Sketch</a
         >
       </div>
-      <figure class="footer-by-cornelia">
+      <div class="footer-by-cornelia">
         <img
           src="./images/by-cornelia.png"
           alt="Cornelia - Design and Development"
         />
-      </figure>
+      </div>
     </footer>
   </body>
 </html>
